--- a/login.html
+++ b/login.html
@@ -40,7 +40,7 @@
             </form>
         </div>
     </div>
-    <script src="index.js"></script>
+    <script src="./js/login.js"></script>
 </body>
 
 </html>
